# docs-tree-ai

./: .env.example  .gitignore  Cargo.toml  README.md
src/: cache.rs  config.rs  error.rs  hasher.rs  lib.rs  llm.rs  main.rs  readme.rs  readme_validator.rs  scanner.rs  summarizer.rs
tests/: integration_tests.rs
