[package]
name = "doctreeai"
version = "0.1.0"
edition = "2021"
description = "A CLI tool that automates generation and updating of README.md using hierarchical tree-based summarization"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/username/doctreeai"
readme = "README.md"
keywords = ["cli", "documentation", "ai", "readme", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "doctreeai"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4.5.46", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# OpenAI SDK for SLM communication
async-openai = "0.29.2"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

# Hashing
sha2 = "0.10.9"

# Directory traversal
walkdir = "2.5.0"

# Gitignore parsing and filtering
ignore = "0.4.23"

# Logging
log = "0.4.27"
env_logger = "0.11.8"

# Error handling
anyhow = "1.0.99"
thiserror = "2.0.16"

# File I/O utilities
fs_extra = "1.3.0"

# Path utilities
pathdiff = "0.2.3"

# Environment file loading
dotenvy = "0.15.7"

[dev-dependencies]
tempfile = "3.21.0"
tokio-test = "0.4.4"
